# logar

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: main.py
logar/: __init__.py  logar.py
versions/: logar-0.1.0-py3-none-any.whl  logar-0.1.1-py3-none-any.whl
